--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
       
 
   <article class="cf ph3 ph5-l pv3 pv4-l f4 tc-l center measure-wide lh-copy mid-gray">
-    <p>Welcome to my blog with some of my work in progress. I&rsquo;ve been working on this book idea. You can read some of the chapters below.</p>
+    <p>Welcome to the DataWave project.</p>
 
   </article>
   
