--- a/index.html
+++ b/index.html
@@ -116,15 +116,15 @@
       
 
   <article class="cf ph3 ph5-l pv3 pv4-l f4 tc-l center measure-wide lh-copy mid-gray">
-    <p>Atmospheric gravity waves (GWs) play an important role in the exchange of momentumbetween the Earth’s surface and the free atmosphere. Uncertainties in gravity wave momentum transport limit our ability to predict the response of the tropospheric and stratospheric circulation to global warming and impact subseasonal-to-seasonal forecasts. Current state-of-the-art parameterizations are severely limited by computational necessity and the scarcity of observations.</p>
+    <!-- raw HTML omitted -->
 <p>The DataWave project is focused on improving our modeling capability for gravity waves and the large scale circulation, and particularly to lead to novel observationally constrained and data-driven gravity wave parameterization schemes.</p>
-<h2 id="main-objectives">Main Objectives</h2>
+<!-- raw HTML omitted -->
 <h4 id="observation-database">Observation Database</h4>
-<p>The first objective is to make available a potentially tranformational data source from Loon LLC with unprecedented, high-resolution observations of atmospheric conditions across thousands of balloon flights.</p>
+<!-- raw HTML omitted -->
 <h4 id="machine-learning">Machine Learning</h4>
-<p>The second objective is to use machine learning to develop one- and three- dimensional data-driven gravity wave parametrizations to more accurately and efficiently represent gravity wave momentum fluxes.</p>
+<!-- raw HTML omitted -->
 <h4 id="task-leaders">Task Leaders</h4>
-<p>You can read more about how the tasks were split up on our [objectives page][https://datawaveproject.github.io/objectives] and learn about the leaders of each task on our [team page][https://datawaveproject.github.io/team].</p>
+<!-- raw HTML omitted -->
 
   </article>
   
