--- a/contact/index.html
+++ b/contact/index.html
@@ -109,7 +109,7 @@
     <main class="pb7" role="main">
       
   <div class="flex-l mt2 mw8 center">
-    <article class="center cf pv5 ph3 ph4-ns mw7">
+    <article class="left cf pv5 ph3 ph4-ns mw7">
       <header>
         <p class="f6 b helvetica tracked">
           
