deploy: 3114af851daa7afb1882c9edfe83ffba1b17ca9c

--- a/contact/index.html
+++ b/contact/index.html
@@ -108,7 +108,7 @@
 
     <main class="pb7" role="main">
       
-  <div class="flex-l mt2 mw8 center">
+  <div class="flex-l mt2 mw8 left">
     <article class="left cf pv5 ph3 ph4-ns mw7">
       <header>
         <p class="f6 b helvetica tracked">
