--- a/services/mergers/index.html
+++ b/services/mergers/index.html
@@ -82,6 +82,12 @@ Ne verba patulosque numen vix libet Agitabitur signa lympha; non lacunae mox cum
         <ul class="pl0 mr3">
           
           <li class="list f5 f4-ns fw4 dib pr3">
+            <a class="hover-white no-underline white-90" href="/team/" title="Team page">
+              Team
+            </a>
+          </li>
+          
+          <li class="list f5 f4-ns fw4 dib pr3">
             <a class="hover-white no-underline white-90" href="/contact/" title="Contact page">
               Contact
             </a>
