--- a/team/index.html
+++ b/team/index.html
@@ -139,13 +139,12 @@
   <div class="bg-white mb3 pa4 gray overflow-hidden">
     <span class="f6 db">Team</span>
     <h1 class="f3 near-black">
-      <a href="http://datawaveproject.github.io/team/peter-van-eijk-copy-3/" class="link black dim">
-        Peter Van Eijk
+      <a href="http://datawaveproject.github.io/team/marshall-borrus/" class="link black dim">
+        Marshall Borrus
       </a>
     </h1>
     <div class="nested-links f5 lh-copy nested-copy-line-height">
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      Project administrator and research assistant to Professor Sheshadri at Stanford.
     </div>
   </div>
 </div>
@@ -155,8 +154,24 @@ Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu 
   <div class="bg-white mb3 pa4 gray overflow-hidden">
     <span class="f6 db">Team</span>
     <h1 class="f3 near-black">
-      <a href="http://datawaveproject.github.io/team/peter-van-eijk-copy-4/" class="link black dim">
-        Peter Van Eijk
+      <a href="http://datawaveproject.github.io/team/brian-green/" class="link black dim">
+        Brian Green
+      </a>
+    </h1>
+    <div class="nested-links f5 lh-copy nested-copy-line-height">
+      Post doc working under Professor Sheshadri
+Does science
+    </div>
+  </div>
+</div>
+</div>
+      
+        <div class="relative w-100 w-30-l mb4 bg-white"><div class="relative w-100 mb4 bg-white nested-copy-line-height">
+  <div class="bg-white mb3 pa4 gray overflow-hidden">
+    <span class="f6 db">Team</span>
+    <h1 class="f3 near-black">
+      <a href="http://datawaveproject.github.io/team/zac-espinosa/" class="link black dim">
+        Zac Espinosa
       </a>
     </h1>
     <div class="nested-links f5 lh-copy nested-copy-line-height">
