deploy: 8e6273223064688cac6c1275975d6c48c6635bb1

--- a/team/index.html
+++ b/team/index.html
@@ -116,7 +116,7 @@
       
   <article class="pa3 pa4-ns nested-copy-line-height nested-img">
     <section class="cf ph3 ph5-l pv3 pv4-l f4 tc-l center measure-wide lh-copy mid-gray"><h1 id="meet-the-team">Meet The Team</h1>
-<p>Our team of qualified accountants and financial consultants can help your business at any stage of it&rsquo;s growth.</p>
+<p>Our team is assembled from a variety of leading institutions.</p>
 </section>
     <section class="flex-ns flex-wrap justify-around mt5">
       
