--- a/404.html
+++ b/404.html
@@ -70,6 +70,12 @@
           </li>
           
           <li class="list f5 f4-ns fw4 dib pr3">
+            <a class="hover-white no-underline white-90" href="/theteam/" title="Team Test page">
+              Team Test
+            </a>
+          </li>
+          
+          <li class="list f5 f4-ns fw4 dib pr3">
             <a class="hover-white no-underline white-90" href="/contact/" title="Contact page">
               Contact
             </a>
