--- a/team/index.html
+++ b/team/index.html
@@ -128,6 +128,11 @@
       
   <article class="pa3 pa4-ns nested-copy-line-height nested-img">
     <section class="cf ph3 ph5-l pv3 pv4-l f4 tc-l center relative w-80 mb4 lh-copy mid-gray"><p>Meet the team members</p>
+<h1 id="project-leads">Project Leads</h1>
+<div class="row">
+
+  
+
 <style>
   .column {
     float: left;
@@ -196,73 +201,15 @@
     </div>
   </div>
 
-<style>
-  .column {
-    float: left;
-    width: 33.3%;
-    margin-bottom: 16px;
-    padding: 0 8px;
-  }
 
-   
-  @media screen and (max-width: 650px) {
-    .column {
-      width: 100%;
-      display: block;
-    }
-  }
 
-   
-  .card {
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  }
 
-   
-  .container {
-    padding: 0 16px;
-  }
+</div>
 
-   
-  .container::after, .row::after {
-    content: "";
-    clear: both;
-    display: table;
-  }
+<h1 id="graduate-researchers">Graduate Researchers</h1>
+<div class="row">
 
-  .title {
-    color: grey;
-  }
-
-  .button {
-    border: none;
-    outline: 0;
-    display: inline-block;
-    padding: 8px;
-    color: white;
-    background-color: #000;
-    text-align: center;
-    cursor: pointer;
-    width: 100%;
-  }
-
-  .button:hover {
-    background-color: #555;
-  }
-
-</style>
-
-  <div class="column">
-    <div class="card">
-      <img src="/images/team/Marshall_Borrus.jpg" alt="Jane" style="width:100%">
-      <div class="container">
-        <h2>Marshall borrus</h2>
-        <p class="title">Project Admin &#43; Research Assistant</p>
-        <p>Administrator for project and research assistant working for Prof. Sheshadri at Stanford</p>
-        <p>stanford.edu</p>
-        <p><button class="button">Contact</button></p>
-      </div>
-    </div>
-  </div>
+  
 
 <style>
   .column {
@@ -332,6 +279,7 @@
     </div>
   </div>
 
+
 <style>
   .column {
     float: left;
@@ -399,6 +347,89 @@
       </div>
     </div>
   </div>
+
+
+
+
+</div>
+
+<h1 id="additional-support">Additional Support</h1>
+<div class="row">
+
+  
+
+<style>
+  .column {
+    float: left;
+    width: 33.3%;
+    margin-bottom: 16px;
+    padding: 0 8px;
+  }
+
+   
+  @media screen and (max-width: 650px) {
+    .column {
+      width: 100%;
+      display: block;
+    }
+  }
+
+   
+  .card {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  }
+
+   
+  .container {
+    padding: 0 16px;
+  }
+
+   
+  .container::after, .row::after {
+    content: "";
+    clear: both;
+    display: table;
+  }
+
+  .title {
+    color: grey;
+  }
+
+  .button {
+    border: none;
+    outline: 0;
+    display: inline-block;
+    padding: 8px;
+    color: white;
+    background-color: #000;
+    text-align: center;
+    cursor: pointer;
+    width: 100%;
+  }
+
+  .button:hover {
+    background-color: #555;
+  }
+
+</style>
+
+  <div class="column">
+    <div class="card">
+      <img src="/images/team/Marshall_Borrus.jpg" alt="Jane" style="width:100%">
+      <div class="container">
+        <h2>Marshall borrus</h2>
+        <p class="title">Project Admin &#43; Research Assistant</p>
+        <p>Administrator for project and research assistant working for Prof. Sheshadri at Stanford</p>
+        <p>stanford.edu</p>
+        <p><button class="button">Contact</button></p>
+      </div>
+    </div>
+  </div>
+
+
+
+
+</div>
 
 </section>
     <section class="flex-ns flex-wrap justify-around mt5">
