--- a/team/index.html
+++ b/team/index.html
@@ -193,6 +193,420 @@
       <img src="/images/team/Aditi_Sheshadri.jpg" alt="Jane" style="width:100%">
       <div class="container">
         <h2>Aditi Sheshadri</h2>
+        <p class="title">Stanford </p>
+        <p>leads the charge</p>
+        <p>stanford.edu</p>
+        <p><button class="button">Contact</button></p>
+      </div>
+    </div>
+  </div>
+
+
+<style>
+  .column {
+    float: left;
+    width: 33.3%;
+    margin-bottom: 16px;
+    padding: 0 8px;
+  }
+
+   
+  @media screen and (max-width: 650px) {
+    .column {
+      width: 100%;
+      display: block;
+    }
+  }
+
+   
+  .card {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  }
+
+   
+  .container {
+    padding: 0 16px;
+  }
+
+   
+  .container::after, .row::after {
+    content: "";
+    clear: both;
+    display: table;
+  }
+
+  .title {
+    color: grey;
+  }
+
+  .button {
+    border: none;
+    outline: 0;
+    display: inline-block;
+    padding: 8px;
+    color: white;
+    background-color: #000;
+    text-align: center;
+    cursor: pointer;
+    width: 100%;
+  }
+
+  .button:hover {
+    background-color: #555;
+  }
+
+</style>
+
+  <div class="column">
+    <div class="card">
+      <img src="/images/team/Aditi_Sheshadri.jpg" alt="Jane" style="width:100%">
+      <div class="container">
+        <h2>Claudia Stephan</h2>
+        <p class="title"> </p>
+        <p> </p>
+        <p> </p>
+        <p><button class="button">Contact</button></p>
+      </div>
+    </div>
+  </div>
+
+
+<style>
+  .column {
+    float: left;
+    width: 33.3%;
+    margin-bottom: 16px;
+    padding: 0 8px;
+  }
+
+   
+  @media screen and (max-width: 650px) {
+    .column {
+      width: 100%;
+      display: block;
+    }
+  }
+
+   
+  .card {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  }
+
+   
+  .container {
+    padding: 0 16px;
+  }
+
+   
+  .container::after, .row::after {
+    content: "";
+    clear: both;
+    display: table;
+  }
+
+  .title {
+    color: grey;
+  }
+
+  .button {
+    border: none;
+    outline: 0;
+    display: inline-block;
+    padding: 8px;
+    color: white;
+    background-color: #000;
+    text-align: center;
+    cursor: pointer;
+    width: 100%;
+  }
+
+  .button:hover {
+    background-color: #555;
+  }
+
+</style>
+
+  <div class="column">
+    <div class="card">
+      <img src="/images/team/Aditi_Sheshadri.jpg" alt="Jane" style="width:100%">
+      <div class="container">
+        <h2>Ed Gerber</h2>
+        <p class="title"></p>
+        <p></p>
+        <p></p>
+        <p><button class="button">Contact</button></p>
+      </div>
+    </div>
+  </div>
+
+
+<style>
+  .column {
+    float: left;
+    width: 33.3%;
+    margin-bottom: 16px;
+    padding: 0 8px;
+  }
+
+   
+  @media screen and (max-width: 650px) {
+    .column {
+      width: 100%;
+      display: block;
+    }
+  }
+
+   
+  .card {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  }
+
+   
+  .container {
+    padding: 0 16px;
+  }
+
+   
+  .container::after, .row::after {
+    content: "";
+    clear: both;
+    display: table;
+  }
+
+  .title {
+    color: grey;
+  }
+
+  .button {
+    border: none;
+    outline: 0;
+    display: inline-block;
+    padding: 8px;
+    color: white;
+    background-color: #000;
+    text-align: center;
+    cursor: pointer;
+    width: 100%;
+  }
+
+  .button:hover {
+    background-color: #555;
+  }
+
+</style>
+
+  <div class="column">
+    <div class="card">
+      <img src="/images/team/Aditi_Sheshadri.jpg" alt="Jane" style="width:100%">
+      <div class="container">
+        <h2>François Lott</h2>
+        <p class="title"> </p>
+        <p> </p>
+        <p> </p>
+        <p><button class="button">Contact</button></p>
+      </div>
+    </div>
+  </div>
+
+
+<style>
+  .column {
+    float: left;
+    width: 33.3%;
+    margin-bottom: 16px;
+    padding: 0 8px;
+  }
+
+   
+  @media screen and (max-width: 650px) {
+    .column {
+      width: 100%;
+      display: block;
+    }
+  }
+
+   
+  .card {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  }
+
+   
+  .container {
+    padding: 0 16px;
+  }
+
+   
+  .container::after, .row::after {
+    content: "";
+    clear: both;
+    display: table;
+  }
+
+  .title {
+    color: grey;
+  }
+
+  .button {
+    border: none;
+    outline: 0;
+    display: inline-block;
+    padding: 8px;
+    color: white;
+    background-color: #000;
+    text-align: center;
+    cursor: pointer;
+    width: 100%;
+  }
+
+  .button:hover {
+    background-color: #555;
+  }
+
+</style>
+
+  <div class="column">
+    <div class="card">
+      <img src="/images/team/Aditi_Sheshadri.jpg" alt="Jane" style="width:100%">
+      <div class="container">
+        <h2>Joan Alexander</h2>
+        <p class="title"> </p>
+        <p> </p>
+        <p> </p>
+        <p><button class="button">Contact</button></p>
+      </div>
+    </div>
+  </div>
+
+
+<style>
+  .column {
+    float: left;
+    width: 33.3%;
+    margin-bottom: 16px;
+    padding: 0 8px;
+  }
+
+   
+  @media screen and (max-width: 650px) {
+    .column {
+      width: 100%;
+      display: block;
+    }
+  }
+
+   
+  .card {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  }
+
+   
+  .container {
+    padding: 0 16px;
+  }
+
+   
+  .container::after, .row::after {
+    content: "";
+    clear: both;
+    display: table;
+  }
+
+  .title {
+    color: grey;
+  }
+
+  .button {
+    border: none;
+    outline: 0;
+    display: inline-block;
+    padding: 8px;
+    color: white;
+    background-color: #000;
+    text-align: center;
+    cursor: pointer;
+    width: 100%;
+  }
+
+  .button:hover {
+    background-color: #555;
+  }
+
+</style>
+
+  <div class="column">
+    <div class="card">
+      <img src="/images/team/Aditi_Sheshadri.jpg" alt="Jane" style="width:100%">
+      <div class="container">
+        <h2>Pedram Hassanzadeh</h2>
+        <p class="title">Director</p>
+        <p>leads the charge</p>
+        <p>stanford.edu</p>
+        <p><button class="button">Contact</button></p>
+      </div>
+    </div>
+  </div>
+
+
+<style>
+  .column {
+    float: left;
+    width: 33.3%;
+    margin-bottom: 16px;
+    padding: 0 8px;
+  }
+
+   
+  @media screen and (max-width: 650px) {
+    .column {
+      width: 100%;
+      display: block;
+    }
+  }
+
+   
+  .card {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  }
+
+   
+  .container {
+    padding: 0 16px;
+  }
+
+   
+  .container::after, .row::after {
+    content: "";
+    clear: both;
+    display: table;
+  }
+
+  .title {
+    color: grey;
+  }
+
+  .button {
+    border: none;
+    outline: 0;
+    display: inline-block;
+    padding: 8px;
+    color: white;
+    background-color: #000;
+    text-align: center;
+    cursor: pointer;
+    width: 100%;
+  }
+
+  .button:hover {
+    background-color: #555;
+  }
+
+</style>
+
+  <div class="column">
+    <div class="card">
+      <img src="/images/team/Aditi_Sheshadri.jpg" alt="Jane" style="width:100%">
+      <div class="container">
+        <h2>Ulrich Achatz</h2>
         <p class="title">Director</p>
         <p>leads the charge</p>
         <p>stanford.edu</p>
