--- a/about/index.html
+++ b/about/index.html
@@ -53,7 +53,7 @@
     
 
   <header>
-    <div class="pb3-m pb6-l bg-black">
+    <div class="pb3-m pb6-l">
       <nav class="pv3 ph3 ph4-ns" role="navigation">
   <div class="flex-l justify-between items-center center">
     <a href="/" class="f3 fw2 hover-white no-underline white-90 dib">
@@ -136,7 +136,7 @@
     <main class="pb7" role="main">
       
   <article class="pa3 pa4-ns nested-copy-line-height nested-img">
-    <section class="cf ph3 ph5-l pv3 pv4-l f4 tc-l center relative w mb4 lh-copy mid-gray"><figure>
+    <section class="cf ph3 ph5-l pv3 pv4-l f5 center relative w mb4 lh-copy mid-gray"><figure>
     <img src="/images/Victor_Hugo-Hunchback.jpg"/> <figcaption>
             <h4>Illustration from Victor Hugo et son temps (1881)</h4>
         </figcaption>
