--- a/team/index.html
+++ b/team/index.html
@@ -54,7 +54,7 @@
 
   
   
-  <header class="cover bg-top" style="background-image: url('http://datawaveproject.github.io/images/gravity_waves_big.jpg');">
+  <header class="cover bg-top" style="background-image: url('/images/gravity_waves_big.jpg');">
     <div class="bg-black-60">
       <nav class="pv3 ph3 ph4-ns" role="navigation">
   <div class="flex-l justify-between items-center center">
@@ -138,7 +138,7 @@
     <main class="pb7" role="main">
       
   <article class="pa3 pa4-ns nested-copy-line-height nested-img">
-    <section class="cf ph3 ph5-l pv3 pv4-l f4 tc-l center relative w mb4 lh-copy mid-gray"><h1 id="project-leads">Project Leads</h1>
+    <section class="cf ph3 ph5-l pv3 pv4-l f5 center relative w mb4 lh-copy mid-gray"><h1 id="project-leads">Project Leads</h1>
 <!-- raw HTML omitted -->
 <style>
 
