--- a/research/index.html
+++ b/research/index.html
@@ -203,11 +203,25 @@
   width: 100%;
   height: auto;
   font-size: 2vh;
+  position: relative;
+  bottom: 0px;
+  right: 0px;
 }
 
 .card {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   border-radius: 8px 8px 8px 8px;
+  overflow: hidden;
+  position: relative;
+  justify-content: space-between;
+  flex-direction: column;
+  height: auto;
+  display: flex;
+}
+
+.container .btn-holder {
+  justify-content: flex-end;
+  display: flex;
 }
 
 .card:hover {
@@ -228,6 +242,9 @@
   transform: skewY(-3deg);
   transform-origin: bottom right;
   text-align: center;
+  position: absolute;
+  right: 0;
+  bottom: 0;
 }
 
 .button:hover {
@@ -254,9 +271,11 @@
   </div>
 
 </div>
+<div class="btn-holder">
 <a class="button" href="http://datawaveproject.github.io/research/seasonal_latitudinal_variability/">
   Learn more
 </a>
+</div>
 </div>
 </div>
       
