--- a/contact/index.html
+++ b/contact/index.html
@@ -33,7 +33,7 @@
     <meta property="og:title" content="Contact" />
 <meta property="og:description" content="Get in Touch" />
 <meta property="og:type" content="article" />
-<meta property="og:url" content="http://datawaveproject.github.io/contact/" /><meta property="article:section" content="" />
+<meta property="og:url" content="http://mborrus.github.io/contact/" /><meta property="article:section" content="" />
 
 
 
@@ -54,7 +54,7 @@
 
   
   
-  <header class="cover bg-top" style="background-image: url('http://datawaveproject.github.io/images/gravity_waves_big.jpg');">
+  <header class="cover bg-top" style="background-image: url('http://mborrus.github.io/images/gravity_waves_big.jpg');">
     <div class="pb3-m pb6-l bg-black-60">
       <nav class="pv3 ph3 ph4-ns" role="navigation">
   <div class="flex-l justify-between items-center center">
@@ -179,7 +179,7 @@
     </main>
     <footer class="bg-black bottom-0 w-100 pa3" role="contentinfo">
   <div class="flex justify-between">
-  <a class="f4 fw4 hover-white no-underline white-70 dn dib-ns pv2 ph3" href="http://datawaveproject.github.io/" >
+  <a class="f4 fw4 hover-white no-underline white-70 dn dib-ns pv2 ph3" href="http://mborrus.github.io/" >
     &copy;  The DataWave Project 2021 
   </a>
     <div>
