--- a/team/index.html
+++ b/team/index.html
@@ -38,7 +38,7 @@
     <meta property="og:title" content="The Team" />
 <meta property="og:description" content="Meet the Team" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="http://datawaveproject.github.io/team/" />
+<meta property="og:url" content="http://mborrus.github.io/team/" />
 
 <meta itemprop="name" content="The Team">
 <meta itemprop="description" content="Meet the Team"><meta name="twitter:card" content="summary"/>
@@ -3145,7 +3145,7 @@
     </main>
     <footer class="bg-black bottom-0 w-100 pa3" role="contentinfo">
   <div class="flex justify-between">
-  <a class="f4 fw4 hover-white no-underline white-70 dn dib-ns pv2 ph3" href="http://datawaveproject.github.io/" >
+  <a class="f4 fw4 hover-white no-underline white-70 dn dib-ns pv2 ph3" href="http://mborrus.github.io/" >
     &copy;  The DataWave Project 2021 
   </a>
     <div>
